--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <title>Meu PWA!</title>
   <meta name="Description" content="PWA Vue.js App">
+  <link rel="manifest" href="/manifest.json" />
 </head>
 <body>
   <div id="app"></div>
