#ISSUE Inserting Service Worker && <noscript>

--- a/static/index.html
+++ b/static/index.html
@@ -7,8 +7,10 @@
   <title>Meu PWA!</title>
   <meta name="Description" content="PWA Vue.js App">
   <link rel="manifest" href="/manifest.json" />
+  <meta name="theme-color" content="#FFFFFF" />
 </head>
 <body>
   <div id="app"></div>
+  <noscript>To run this application, JavaScript is required to be enabled.</noscript>
 </body>
 </html>
