#ISSUE Adding Vuetify

--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <noscript>To run this application, JavaScript is required to be enabled.</noscript>
+  <noscript>To run this application is required to be enabled.</noscript>
 </body>
 </html>
