#ISSUE Implementation of typeform initiated

--- a/static/index.html
+++ b/static/index.html
@@ -14,5 +14,6 @@
 <body>
   <div id="app"></div>
   <noscript>To run this application is required to be enabled.</noscript>
+  <script src="https://embed.typeform.com/embed.js" type="text/javascript"></script>
 </body>
 </html>
