--- a/static/index.html
+++ b/static/index.html
@@ -10,10 +10,27 @@
   <meta name="theme-color" content="#FFFFFF" />
   <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons' rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.min.css" rel="stylesheet">
+  <style type="text/css">
+
+    html {
+       margin: 0;
+       height: 100%;
+       overflow: hidden;
+    }
+    iframe {
+      position: absolute;
+      left:0;
+      right:0;
+      bottom:0;
+      top:0;
+      border:0;
+    }
+  </style> 
 </head>
 <body>
   <div id="app"></div>
   <noscript>To run this application is required to be enabled.</noscript>
   <script src="https://embed.typeform.com/embed.js" type="text/javascript"></script>
+  <iframe id="typeform-full" width="100%" height="100%" frameborder="0" src="https://ahsouza.typeform.com/to/eIZksH"></iframe>
 </body>
 </html>
